--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "clean": "rimraf dist",
     "copyfonts": "copyfiles -f node_modules/font-awesome/fonts/* dist/fonts",
     "imagemin": "imagemin img/* --out-dir='dist/img'",
-    "usemin": "usemin contactus.html -d dist --htmlmin -o dist/contactus.html && usemin aboutus.html -d dist --htmlmin -o dist/aboutus.html && usemin index.html -d dist --htmlmin -o dist/index.html",
+    "usemin": "usemin index.html -d dist --htmlmin -o dist/index.html",
     "build": "npm run clean && npm run imagemin && npm run copyfonts && npm run usemin"
   },
   "author": "Angelx",
@@ -40,6 +40,7 @@
     "node-sass": "^4.13.0",
     "onchange": "^6.1.0",
     "parallelshell": "^3.0.2",
+    "rimraf": "^2.7.1",
     "uglifyjs": "^2.4.11",
     "usemin-cli": "^0.5.1"
   }
